@@ -4955,3 +4955,4 @@
   AbstractEntityConnectionProvider, connection validity check scheduler moved to DefaultEntityApplicationModel
   NavigableImagePanel.centerImage(Point) and centerImage(Coordinates) added
   Controls.toggleControl() overloaded with name parameter
+  SerializationWhitelist now supports simple wildcard entries org.jminor.* or org.jminor.common.Value*
